fixed tasks and done BackupUtility